# luxupt-hacs

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  repository.yaml
docs/: configuration.md  getting-started.md  troubleshooting.md
luxupt/: Dockerfile  README.md  build.yaml  config.yaml  pyproject.toml  run.sh
luxupt/docs/: configuration.md  getting-started.md  troubleshooting.md  web-interface.md
luxupt/src/app/: camera_manager.py  logging_config.py  startup.py  timelapse_service.py
luxupt/src/app/crud/: activity_crud.py  base.py  camera_crud.py  job_crud.py  scheduler_settings_crud.py  user_crud.py
luxupt/src/app/db/: __init__.py  connection.py
luxupt/src/app/db/migrations/: env.py
luxupt/src/app/db/migrations/versions/: 20260220_0100_002_drop_override_deletion_from_jobs.py
luxupt/src/app/models/: __init__.py  backup_settings.py  camera.py  capture.py  job.py  scheduler_settings.py  user.py
luxupt/src/app/schemas/: capture.py  user.py
luxupt/src/app/services/: __init__.py  backup_service.py  camera_service.py  capture_service.py  capture_stats_service.py  image_service.py  job_service.py  path_security.py  settings_service.py
luxupt/src/app/services/portal/: cameras_view_service.py  images_view_service.py  system_view_service.py  timelapses_view_service.py  users_view_service.py
luxupt/src/app/web/: __init__.py  auth.py  deps.py  main.py  middleware.py
luxupt/src/app/web/routers/: api_router.py  cameras_router.py  images_router.py  pages_router.py  setup_router.py  system_router.py  timelapses_router.py
luxupt/src/app/web/static/css/: compiled.css  tailwind.css
luxupt/src/app/web/static/js/: app.js  capture-stats.js
luxupt/src/app/web/templates/fragments/: toast.html
luxupt/src/app/web/templates/layouts/: base.html
luxupt/src/app/web/templates/macros/: badges.html  buttons.html  cards.html  forms.html  navigation.html
luxupt/src/app/web/templates/pages/: 401.html  403.html  404.html  about.html  cameras.html  components.html  error.html  login.html  setup.html  timelapses_jobs.html  users.html
luxupt/src/app/web/templates/pages/components/: badges.html  buttons.html  cards.html  colors.html  icons.html  panels.html  surfaces.html
luxupt/src/app/web/templates/partials/cameras/: camera_card.html  camera_list.html  camera_panel.html  camera_settings_panel.html  camera_settings_result.html  capture_stats_charts.html
luxupt/src/app/web/templates/partials/images/: delete_preview.html  delete_result.html  image_grid.html  lightbox_content.html
luxupt/src/app/web/templates/partials/system/: user_delete_confirm.html  user_form_result.html
luxupt/src/app/web/templates/partials/timelapses/: create_result.html  date_select.html  job_list.html  job_progress.html  scheduler_result.html  stats.html  stats_oob.html
src/app/: alembic.ini  camera_manager.py  cli.py  config.py  entrypoint.sh  fetch_service.py  main.py  startup.py  timelapse_service.py
src/app/crud/: __init__.py  backup_settings_crud.py  capture_crud.py  fetch_settings_crud.py  job_crud.py  timelapse_crud.py
src/app/db/: base.py  connection.py
src/app/db/migrations/: __init__.py
src/app/db/migrations/versions/: 20260204_0100_001_add_keep_images_to_jobs.py
src/app/models/: activity.py  fetch_settings.py  job.py  timelapse.py
src/app/schemas/: __init__.py  activity.py  camera.py  fetch_settings.py  job.py  scheduler_settings.py  timelapse.py
src/app/services/: activity_service.py  camera_service.py  capture_cleanup_service.py  health_service.py  job_service.py  metrics_service.py  timelapse_browser_service.py  user_service.py
src/app/services/portal/: __init__.py  dashboard_view_service.py  images_view_service.py
src/app/utils/: __init__.py  async_fs.py
src/app/web/: auth.py  template_filters.py
src/app/web/routers/: __init__.py  images_router.py
src/app/web/templates/components/: modal.html  nav.html  toast.html
(+31 files in other folders)
