[tool.poetry]
name = "luxupt"
version = "1.1.7"
description = "LuxUPT - Time-lapse videos from UniFi Protect cameras"
authors = ["Luxardo Labs <info@luxardolabs.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/DylanSallee/luxupt-hacs"
repository = "https://github.com/DylanSallee/luxupt-hacs"
documentation = "https://labs.lux4rd0.com/applications/luxupt/"
keywords = ["unifi", "protect", "timelapse", "video", "surveillance", "luxupt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Monitoring"
]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
urllib3 = "^2.6.3"
fastapi = "^0.128.0"
uvicorn = {version = "^0.40.0", extras = ["standard"]}
jinja2 = "^3.1.6"
python-multipart = "^0.0.22"
python-jose = {version = "^3.5.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["argon2"]}
aiofiles = "^25.1.0"
pillow = "^12.1.0"
sqlalchemy = {version = "^2.0.46", extras = ["asyncio"]}
aiosqlite = "^0.22.1"
alembic = "^1.14.0"
python-json-logger = "^4.0.0"  # For structured JSON logging

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
black = "^26.1.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"
ruff = "^0.14.14"

[tool.poetry.scripts]
luxupt = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | tests/.*/snapshots
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
known_first_party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--asyncio-mode=auto"
]

[tool.coverage.run]
source = ["src/app"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]